# amm-near

./: Cargo.toml  README.md  build.sh  clean.sh  deploy.sh  redeploy.sh  test.sh
amm/: Cargo.toml
amm/src/: lib.rs
ft/: Cargo.toml
res/: amm.wasm  fungible_token.wasm  test_contract.wasm
src/: lib.rs
tests/: main.rs
tests/sim/: integration_test.rs  utils.rs
