[package]
name = "amm"
version = "0.1.0"
authors = ["Kyrylo Stepanov <k.stepanov@tutannota.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0-pre.4"
near-contract-standards = "4.0.0"
itertools = "0.10.3"
[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
