[package]
name = "near-amm"
version = "0.1.0"
authors = ["Kyrylo Stepanov <k.stepanov@tutannota.com>"]
edition = "2021"

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"

[dev-dependencies]
fungible-token = { path = "./ft" }
amm = { path = "./amm" }

tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
near-primitives = "0.5.0"
near-units = "0.2.0"
serde_json = "1.0"
near-sdk = "4.0.0"
workspaces = "0.4.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[workspace]
members = [
    "amm",
    "ft"
]
